EF JsonConvert: map field with text columun, serializing/deserializing value

--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -55,9 +55,10 @@
           }
         }
       },
-      "__Ws.Core.Extensions.Data.EF": {
+      "Ws.Core.Extensions.Data.EF": {
         "priority": 399,
         "options": {
+          "jsonConvert": [ "web.Code.IJsonConvertible, web" ],
           "mappings": [
             {
               "name": "User",
