EF JsonConvert: map/unmap property with text columun, serializing/deserializing value

--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -61,18 +61,11 @@
           "jsonConvert": [ "web.Code.IJsonConvertible, web" ],
           "mappings": [
             {
-              "name": "User",
-              "table": "_User",
-              "schema": "test",
-              "IdColumnName": "Id",
+              "name": "Page",
               "properties": [
                 {
-                  "name": "Company",
-                  "column": "_Company"
-                },
-                {
-                  "name": "ToIgnore",
-                  "ignore": true
+                  "name": "Meta",                  
+                  "jsonConvert": true
                 }
               ]
             }
