--- a/src/modules/Data.EF/Data.EF.csproj
+++ b/src/modules/Data.EF/Data.EF.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PackageVersion>1.0.0</PackageVersion>
+    <PackageVersion>1.1.0</PackageVersion>
     <PackageId>Ws.Core.Extensions.Data.EF</PackageId>
     <AssemblyName>Ws.Core.Extensions.Data.EF</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Data.EF</RootNamespace>
@@ -10,8 +10,8 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description>DbContext and IRepository interface for EF-based extensions</Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Nuget update</PackageReleaseNotes>
-    <PackageTags>EF data mapper</PackageTags>
+    <PackageReleaseNotes>JsonConvert: map Type/Interface with text columun, map/unmap property with text columun, serializing/deserializing value;</PackageReleaseNotes>
+    <PackageTags>EF data mapper</PackageTags> 
   </PropertyGroup>
 
   <PropertyGroup>
