--- a/src/core.NLog/core.NLog.csproj
+++ b/src/core.NLog/core.NLog.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
-    <PackageVersion>0.0.1-alpha</PackageVersion>
+    <PackageVersion>0.0.1-beta</PackageVersion>
     <PackageId>Ws.Core.NLog</PackageId>
     <AssemblyName>Ws.Core.NLog</AssemblyName>
     <RootNamespace>Ws.Core</RootNamespace>
