--- a/src/modules/Api/Api.csproj
+++ b/src/modules/Api/Api.csproj
@@ -2,23 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>  
-    <PackageVersion>1.0.1</PackageVersion>
+    <PackageVersion>1.1.0</PackageVersion> 
     <PackageId>Ws.Core.Extensions.Api</PackageId>
     <AssemblyName>Ws.Core.Extensions.Api</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Api</RootNamespace>     
     <Authors>Massimo Di Paolo</Authors>   
-    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
+    <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright> 
     <Description></Description>    
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Fully qualify schema for Swagger</PackageReleaseNotes>         
-    <PackageTags></PackageTags>               
+    <PackageReleaseNotes>Add base/common controllers, add custom converters</PackageReleaseNotes>         
+    <PackageTags></PackageTags>                
   </PropertyGroup>
 
   <PropertyGroup>
     <NoWarn>1701;1702;1705;1591</NoWarn>
     <DocumentationFile>bin\$(Configuration)\$(TargetFramework)\$(AssemblyName).xml</DocumentationFile>
   </PropertyGroup>
-  
+   
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
