Fix override System.Text.Json with Newtonsoft.Json

--- a/samples/web/NLog.config
+++ b/samples/web/NLog.config
@@ -36,7 +36,7 @@
   <rules>
     <!-- add your logging rules here -->
 
-    <logger name="*" minlevel="Debug" writeTo="file" />
+    <logger name="*" minlevel="Warning" writeTo="file" />
 
   </rules>
 </nlog>
