--- a/samples/web/NLog.config
+++ b/samples/web/NLog.config
@@ -36,7 +36,7 @@
   <rules>
     <!-- add your logging rules here -->
 
-    <logger name="*" minlevel="Warning" writeTo="file" />
+    <logger name="*" minlevel="Info" writeTo="file" />
 
   </rules>
 </nlog>
