--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -17,6 +17,7 @@
           ]
         }
       },
+      "Ws.Core.Extensions.Routing": {"priority": 150},
       "Ws.Core.Extensions.Cors": {
         "priority": 200
       },
