--- a/src/modules/Data.FileSystem/Data.FileSystem.csproj
+++ b/src/modules/Data.FileSystem/Data.FileSystem.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-    <PackageVersion>1.0.1</PackageVersion> 
+    <PackageVersion>3.0.0</PackageVersion> 
     <PackageId>Ws.Core.Extensions.Data.FileSystem</PackageId>
     <AssemblyName>Ws.Core.Extensions.Data.FileSystem</AssemblyName>
     <RootNamespace>Ws.Core.Extensions.Data.FileSystem</RootNamespace>
@@ -10,7 +10,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description></Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Add Merge operation options (upsert / sync)</PackageReleaseNotes>
+    <PackageReleaseNotes>.netcore 3</PackageReleaseNotes>
     <PackageTags></PackageTags>
   </PropertyGroup> 
 
@@ -20,7 +20,7 @@
   </PropertyGroup>   
   
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
   <ItemGroup>
