--- a/src/modules/Data/Data.csproj
+++ b/src/modules/Data/Data.csproj
@@ -3,7 +3,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>  
 		<TargetFramework>netcoreapp3.0</TargetFramework>
-		<PackageVersion>1.0.0</PackageVersion> 
+		<PackageVersion>3.0.0</PackageVersion> 
 		<PackageId>Ws.Core.Extensions.Data</PackageId>
 		<AssemblyName>Ws.Core.Extensions.Data</AssemblyName>
 		<RootNamespace>Ws.Core.Extensions.Data</RootNamespace>
@@ -11,7 +11,7 @@
     <Copyright>© Massimo Di Paolo. All rights reserved.</Copyright>
     <Description></Description>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <PackageReleaseNotes>Add Merge operation options (upsert / sync)</PackageReleaseNotes>    
+    <PackageReleaseNotes>.netcore 3</PackageReleaseNotes>
     <PackageTags></PackageTags> 
   </PropertyGroup>
 
