--- a/samples/web/web.csproj
+++ b/samples/web/web.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\modules\HealthCheck\HealthCheck.csproj" />
     <ProjectReference Include="..\..\src\modules\Routing\Routing.csproj" />
     <ProjectReference Include="..\..\src\core\core.csproj" />
     <ProjectReference Include="..\..\src\modules\Api\Api.csproj" />
