--- a/samples/web/web.csproj
+++ b/samples/web/web.csproj
@@ -14,11 +14,14 @@
     <None Remove="wwwroot\folder\**" />
   </ItemGroup>  
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.Hangfire" Version="3.0.0" />
+    <PackageReference Include="Hangfire" Version="1.7.7" />
     <PackageReference Include="NLog.Config" Version="4.6.8" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.9.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\modules\HealthCheck\HealthCheck.csproj" />
+    <ProjectReference Include="..\..\src\modules\Message\Message.csproj" />
     <ProjectReference Include="..\..\src\modules\Routing\Routing.csproj" />
     <ProjectReference Include="..\..\src\core\core.csproj" />
     <ProjectReference Include="..\..\src\modules\Api\Api.csproj" />
