--- a/src/modules/HealthCheck/HealthCheck.csproj
+++ b/src/modules/HealthCheck/HealthCheck.csproj
@@ -20,7 +20,11 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.Network" Version="3.0.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.System" Version="3.0.3" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI" Version="3.0.4" />
     <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="3.0.0" />
+    <PackageReference Include="AspNetCore.HealthChecks.Uris" Version="3.0.0" />
   </ItemGroup>  
 
   <ItemGroup>
