Test process check, add driver info in diagnostic

--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -165,6 +165,7 @@
               "maximumAllocatedMb": 500,
               "status": "Degraded"
             },
+            "process": [{ "processName": "iisexpress", "name": "iisexpress", "status": "Degraded"}],
             "tcp": [
               {
                 "host": "127.0.0.1",
@@ -196,7 +197,7 @@
               }
             ],
             "evaluationTimeInSeconds": 60,
-            "minimumSecondsBetweenFailureNotifications": 3600
+            "minimumSecondsBetweenFailureNotifications": 300
           }
         }
       }
