HealthCheck: db path options

--- a/samples/web/ext-settings.json
+++ b/samples/web/ext-settings.json
@@ -180,6 +180,7 @@
           },
           "ui": {
             "enabled": true,
+            "dbPath": "Files\\healthchecksdb",
             "injectCss": "wwwroot/healthcheck-ui/style.css",
             "endpoints": [
               {
