--- a/src/modules/Api/Api.csproj
+++ b/src/modules/Api/Api.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup> 
-    <TargetFramework>netcoreapp3.0</TargetFramework>
-    <PackageVersion>3.0.4</PackageVersion>   
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <PackageVersion>3.1.0</PackageVersion>   
     <PackageId>Ws.Core.Extensions.Api</PackageId>
     <AssemblyName>Ws.Core.Extensions.Api</AssemblyName> 
     <RootNamespace>Ws.Core.Extensions.Api</RootNamespace>     
@@ -21,9 +21,9 @@
    
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Session" Version="2.2.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0-rc4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
